# RRISC

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs  utils.rs
src/core/: alu.rs  control_unit.rs  execute.rs  mod.rs  register_file.rs  tomasulo.rs
src/isa/: mod.rs
src/memory/: mod.rs
src/peripherals/: mod.rs
